[project]
name = "poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]
sqlite = [
    "aiosqlite>=0.22.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"