[project]
name = "poker"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]
sqlite = [
    "aiosqlite>=0.22.1",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
